Add some Java8 logic, so is more simple and readable

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -91,3 +91,8 @@ databaseChangeLog:
                   type: int
                   constraints:
                     nullable: true
+              - column:
+                  name: adjacent_mines
+                  type: int
+                  constraints:
+                    nullable: true
