--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -62,6 +62,11 @@ databaseChangeLog:
                   type: datetime
                   constraints:
                     nullable: true
+              - column:
+                  name: active
+                  type: bool
+                  constraints:
+                    nullable: false
   - changeSet:
       id: 3
       author: mgraziani
