--- a/src/main/resources/application.heroku.properties
+++ b/src/main/resources/application.heroku.properties
@@ -4,3 +4,4 @@ spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
+spring.jpa.hibernate.ddl-auto=update
