--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: mgraziani
       changes:
         - createTable:
-            tableName: Player
+            tableName: player
             columns:
               - column:
                   name: id
@@ -23,7 +23,7 @@ databaseChangeLog:
       author: mgraziani
       changes:
         - createTable:
-            tableName: Game
+            tableName: game
             columns:
               - column:
                   name: id
@@ -72,7 +72,7 @@ databaseChangeLog:
       author: mgraziani
       changes:
         - createTable:
-            tableName: Cell
+            tableName: cell
             columns:
               - column:
                   name: id
